adding styling on right side of page

--- a/assets/index.html
+++ b/assets/index.html
@@ -113,6 +113,10 @@
         .mainContent div img{
             width: 100%
         }
+        .mainContent div p:nth-child(3){
+            max-width: 80%;
+            text-indent: 1rem;
+        }
         .mainContent div a.btn{
             display: inline-block;
             margin-top: 1em;
@@ -143,6 +147,12 @@
             
 
         }
+        .banner nav a{
+            text-decoration: none;
+            color: gold;
+            font-weight: 900;
+            margin: 0 1rem;
+        }
     </style>
 <body>
     <div class="mainContainer">
@@ -159,6 +169,9 @@
                         Moving you is our top priority. No matter where you are <span id="Ameri">Ameri</span><span id="Move">Move</span> will ensure a quick and safe move to your location under any cicumstances. <span id="Ameri">Ameri</span><span id="Move">Move</span> offers a variety of moving services that fits your needs.
                     </p>
                     <a href="#" class="btn">More Info</a>
+                    <footer>
+
+                    </footer>
                 </div>
             </div>
         </main>
