positions on content-item

--- a/assets/index.html
+++ b/assets/index.html
@@ -38,6 +38,13 @@
             margin: 0 auto;
             display: flex;
         }
+
+        .main-content{
+            position: relative;
+        }
+        .content-item{
+            position: absolute;
+        }
     </style>
 <body>
     <div class="main-container">
@@ -56,17 +63,17 @@
 
 
 
-        <main id="content">
-            <div id="home" class="main-content">
+        <main id="main-content">
+            <div id="home" class="content-item">
                 <h1>home</h1>
             </div>
-            <div id="services" class="main-content">
+            <div id="services" class="content-item">
                 <h1>services</h1>
             </div>
-            <div id="about" class="main-content">
+            <div id="about" class="content-item">
                 <h1>about</h1>
             </div>
-            <div id="contact" class="main-content">
+            <div id="contact" class="content-item">
                 <h1>contact</h1>
             </div>
         </section>
