update repo and continue messing with script html modification

--- a/assets/index.html
+++ b/assets/index.html
@@ -108,9 +108,10 @@
             </div>
             <nav>
                 <ul class="nav-list">
-                    <li class="nav-btn selected">Services</li>
-                    <li class="nav-btn">About Us</li>
-                    <li class="nav-btn">Contact Us</li>
+                    <li class="nav-btn selected" data-id="home">Home</li>
+                    <li class="nav-btn" data-id="services">Services</li>
+                    <li class="nav-btn" data-id="about">About Us</li>
+                    <li class="nav-btn" data-id="contact">Contact Us</li>
                 </ul>
             </nav>
         </header>
