continue transition script

--- a/assets/index.html
+++ b/assets/index.html
@@ -94,7 +94,9 @@
         .hidden {
             display: none;
         }
-
+        .active{
+            display: block;
+        }
 
 
     </style>
