--- a/assets/index.html
+++ b/assets/index.html
@@ -101,7 +101,7 @@
 
     </style>
 
-<body>
+<body class="main-body">
     <div class="main-container">
         <header id="banner">
             <img class="b-img" src="../content/images/ps/lmtv_qrtTurn.png" alt="">
