transition script working

--- a/assets/index.html
+++ b/assets/index.html
@@ -97,12 +97,48 @@
             position: absolute;
         }
 
+        @keyframes appear {
+            0% {
+                display: block;
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+                
+            }
+        }
+
+        @keyframes disappear {
+            0% {
+                opacity: 1;
+            }
+
+            100% {
+                opacity: 0;
+                display: none;
+            }
+        }
+
+
+
+
+
         .hidden {
-            display: none;
+            animation-name: disappear;
+            animation-duration: 2s;
+            animation-delay: 0;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
         }
 
         .active {
-            display: block;
+            animation-name: appear;
+            animation-duration: 2s;
+            animation-delay: 0;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+
         }
     </style>
 
