adding content to services

--- a/assets/index.html
+++ b/assets/index.html
@@ -26,6 +26,15 @@
             height: 100vh;
         }
 
+        #ameri{
+            color: red;
+            font-weight: 900;
+        }
+        #move{
+            color: blue;
+            font-weight: 500;
+        }
+
         h1,
         h2,
         h3,
@@ -121,7 +130,7 @@
         }
 
         .content-item p {
-            max-width: 80%;
+            max-width: 90%;
             margin: 0 auto;
             text-indent: 1rem;
         }
@@ -228,6 +237,16 @@
                 <header>
                     <h2>our services</h2>
                 </header>
+                <section>
+                    <div>
+                        <p>
+                            <span id="ameri">Ameri</span><span id="move">move</span> offer a variety of moving services. We provide high level of security to ensure the safety transportation of all your essentials. 
+                        </p>
+                        <hr>
+                        <span>Local Move</span><span>US Move</span><span>International Move</span><span></span>
+                        <hr>
+                    </div>
+                </section>
             </div>
             <div id="about" class="content-item hidden">
                 <header>
