--- a/assets/index.html
+++ b/assets/index.html
@@ -229,7 +229,7 @@
                     <p>
                         We are proud to serve our country. Offering top moving services all over the world.
                     </p>
-                    <a class="btn btn-info" href="#">Get a quote</a>
+                    <a class="btn btn-info" href="#">Learn more</a>
 
                 </section>
             </div>
@@ -242,9 +242,13 @@
                         <p>
                             <span id="ameri">Ameri</span><span id="move">move</span> offer a variety of moving services. We provide high level of security to ensure the safety transportation of all your essentials. 
                         </p>
-                        <hr>
-                        <span>Local Move</span><span>US Move</span><span>International Move</span><span></span>
-                        <hr>
+                        <ul>
+                            <li>Household Moves</li>
+                            <li>Corporate Moves</li>
+                            <li>Local Moves</li>
+                            <li>Interstate Moves</li>
+                            <li>International Moves</li>
+                        </ul>
                     </div>
                 </section>
             </div>
@@ -257,6 +261,14 @@
                 <header>
                     <h2>contact us</h2>
                 </header>
+                <form action="">
+                    <h3>Get a free moving quote in minutes</h3>
+                    <label for="from">Moving From</label>
+                    <input type="text" name="from" id="from">
+                    <label for="to">Moving To</label>
+                    <input type="text" name="to" id="to">
+
+                </form>
             </div>
         </main>
 
