Continue styling per usual

--- a/assets/index.html
+++ b/assets/index.html
@@ -14,7 +14,7 @@
         }
 
         :root {
-            --color-primary: rgb(50, 50, 50);
+            --color-primary: rgb(34, 34, 34);
             --color-secondary: gold;
             --color-text: #efefef;
         }
@@ -166,7 +166,7 @@
 
         .hidden {
             animation-name: disappear;
-            animation-duration: 2s;
+            animation-duration: 1s;
             animation-delay: 0;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
@@ -174,7 +174,7 @@
 
         .active {
             animation-name: appear;
-            animation-duration: 2s;
+            animation-duration: 1s;
             animation-delay: 0;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
@@ -208,6 +208,7 @@
             background: rgb(255, 230, 0,.3);
             padding: 1em;
             border-radius: 3px;
+            border-bottom-right-radius: 10px;
         }
     </style>
 
