--- a/assets/index.html
+++ b/assets/index.html
@@ -210,6 +210,12 @@
             border-radius: 3px;
             border-bottom-right-radius: 10px;
         }
+        form h3{
+            margin: 1rem .5rem;
+        }
+        form input{
+            margin-bottom: 1rem;
+        }
     </style>
 
 <body class="main-body">
@@ -274,10 +280,10 @@
                     <h2>Quote</h2>
                 </header>
                 <form action="">
-                    <h3>Get a free moving quote in minutes</h3>
-                    <label for="from">Moving From</label><br>
+                    <h3>Get a free moving quote in minutes!</h3>
+                    <label for="from">Moving From:</label><br>
                     <input type="text" name="from" id="from"><br>
-                    <label for="to">Moving To</label><br>
+                    <label for="to">Moving To:</label><br>
                     <input type="text" name="to" id="to"><br>
                     <input type="submit" value="Next Step">
                 </form>
