--- a/responsiveWebsite/index.html
+++ b/responsiveWebsite/index.html
@@ -7,9 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Education Website Using HTML, CSS & Javascript</title>
     <link rel="stylesheet" href="./css/style.css">
+    <!-- 
+        - FONT AWESOME CDN v5.4.0
+     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.4.0/css/all.min.css"
         integrity="sha512-eBNnVs5xPOVglLWDGXyZnZZ2K2ixXhR/3aECgCpFnW2dGCd/yiqXZ6fcB3BubeA91kM6NX234b6Wrah8RiYAPA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- 
+        - GOOGLE FONTS Montserrat
+     -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
