not very familiar with fr units. Will use percentages instead

--- a/DeconTrailerOperations/00index.html
+++ b/DeconTrailerOperations/00index.html
@@ -140,7 +140,7 @@
 
 
 
-        <div class="container content-container">
+        <div id="preInformation" class="container content-container">
             <div class="illustration">
                 <img src="./images/stock/IMG_20220609_151823544_HDR.jpg" alt="">
             </div>
